Wed Jan 21 22:19:35 1998  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in: - added a install_root prefix to all paths, if
	set, to enable package managers to move the whole installation at once
	- added --with-install-root to set the install_root prefix

Tue Jan 20 22:41:04 1998  Stephan Kulow  <coolo@kde.org>

	* configure.in: added NOOPT_CXXFLAGS to allow kioslave to be
	compiled without -O2

Mon Jan 19 21:55:21 1998  Stephan Kulow  <coolo@kde.org>

	* configure.in: some little fixes for the Makefiles

	* acinclude.m4.in: --prefix will no longer override the search for 
	libraries. If they are present somewhere, they are used (through
	the methodes in KApplication)

Mon Jan 12 00:30:36 1998  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in fixed an ugly bug, that accoured, when
	qt_libraries is not set (empty/equals X11/not necessary)
	
	* acinclude.m4.in moved the remove of the files after the error
	detection 
	

Sun Jan 11 17:27:53 1998  Stephan Kulow  <coolo@kde.org>

	* acinclude.m4.in added a new macro KDE_CHECK_QT_DIRECT to unset
	the Qt library path, if a Qt program compiles without them
		
	* acinclude.m4.in added a return value in the CREATE_KFSSTND
	macro. Perhaps this has caused the problems

Sat Jan 10 17:40:44 1998  Stephan Kulow  <coolo@kde.org>

	* ChangeLog started to maintain a ChangeLog file again
	* acinclude.m4.in the AC_CREATE_KFSSTND to get better debug output
	to find the problem
	

Old logs, Stephan Kulow made:
	
0.1 : first steps with libkde
0.2 : first release with libkde, khtmlw, kdehelp, acli, kwm, kpanel
0.3 : added kfm and bugfixes
0.4 : updated khtmlw, kdehelp, kwm, changed install in all subdirs
0.5 : support libtool (chooseable shared libs)
0.6 : split libkde in kdecore and kdeui 
0.6.1 : Bugfixes
0.7 : added code from Janos Farkas (configure)
    : added @{kde,qt}_{includes,libraries}@
0.7.1: Bugfixes
0.7.2: Bugfixes
0.7.3: added @all_includes@ and @all_libraries@