@@ -1,15 +1,13 @@
+
 SUBDIRS = apps pics
 
 install-data-local: runkappfinder_$(RUN_KAPPFINDER)
 
-install-exec-local:
-	$(mkinstalldirs) $(bindir)
-	$(INSTALL_SCRIPT) ./kappfinder $(bindir)
-	$(INSTALL_SCRIPT) ./kappfinder_restart $(bindir)
+bin_SCRIPTS = kappfinder kappfinder_restart
 
 runkappfinder_yes:
 	echo "Installing non-KDE applications"
-	./kappfinder $(prefix)
+	$(SHELL) ./kappfinder $(prefix)
 
 runkappfinder_no:
 
